# voice-to-voice

./: .env.example  README.md  pyproject.toml
src/voice_to_voice/: __init__.py  main.py
src/voice_to_voice/api/: chat.py
src/voice_to_voice/core/: __init__.py  config.py
src/voice_to_voice/core/enums/: connection_state.py  message.py
src/voice_to_voice/dto/: chat.py
src/voice_to_voice/infra/sk/: __init__.py  agent.py
src/voice_to_voice/infra/speech_to_text/: __init__.py  exceptions.py  speech_to_text.py
src/voice_to_voice/infra/text_to_speech/: __init__.py  audio_event_handler.py  text_to_speech.py
src/voice_to_voice/schemas/: agent.py  stt.py
src/voice_to_voice/services/chat/: chat_service.py
src/voice_to_voice/utils/agents/: __init__.py  cancel_token.py  transcription_event.py
src/voice_to_voice/utils/voice/: __init__.py  remove_formatting.py
