[project]
name = "voice-to-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-speech>=1.46.0",
    "fastapi[standard]>=0.121.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "semantic-kernel==1.30",
    "tenacity>=9.1.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
